Instance_Vpc/private.tf
resource "aws_security_group" "db" {
    name = "vpc_db"
    description = "Allow incoming database connections."

    ingress { # SQL Server
        from_port = 1433
        to_port = 1433
        protocol = "tcp"
        security_groups = aws_security_group.web.id
    }
    ingress { # MySQL
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = aws_security_group.web.id
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = var.vpc_cidr
    }
    
    egress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    egress {
    description = "output"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    vpc_id = aws_vpc.custom.id

    tags = {
        Name = "DBServerSG"
    }
}

resource "aws_instance" "db-1" {
    ami = var.instance_id1
    availability_zone = "ap-south-1b"
    instance_type = "t2.micro"
    key_name = "tfkeypair"
    vpc_security_group_ids = aws_security_group.db.id
    subnet_id = aws_subnet.ap-south-1b-private.id
    source_dest_check = false

    tags = {
        Name = "mysql server"
    }
    
    user_data = <<-EOF
        #!/bin/bash
        sudo apt update
        sudo apt install mysql-server
    EOF
}
